2003-12-25  Mo DeJong  <mdejong@users.sourceforge.net>

	* win/configure:
	* win/tcl.m4 (SC_ENABLE_SYMBOLS): Fix last
	update to macro, the Win32 DBGX symbol should
	be d not g.

2003-11-29  Mo DeJong  <mdejong@users.sourceforge.net>

	* unix/configure: Regen.
	* unix/tcl.m4 (SC_ENABLE_SYMBOLS):
	* win/configure: Regen.
	* win/tcl.m4 (SC_ENABLE_SYMBOLS): Update
	macro to support passing --enable-symbols=mem
	on the configure command line.

2003-09-13  Mo DeJong  <mdejong@users.sourceforge.net>

	* unix/configure: Regen.
	* unix/tcl.m4 (SC_PATH_X): Error out in the
	configure if no X11 includes can be found.

2003-08-10  Mo DeJong  <mdejong@users.sourceforge.net>

	* unix/Makefile.in: Remove evil rerun of autoconf.
	* unix/configure: Regen.
	* unix/tcl.m4: Update from Tcl to get CFLAGS
	opt fix.
	* win/configure: Regen.
	* win/tcl.m4 (SC_CONFIG_CFLAGS): Update macro
	to behave more like the Tcl version of same.

2003-08-10  Mo DeJong  <mdejong@users.sourceforge.net>

	* win/tkWinWm.c: Back port of wm iconbitmap
	feature from Tk 8.4. This feature provides the
	ability to set a Windows icon for toplevel
	windows.

2003-04-07  Mo DeJong  <mdejong@users.sourceforge.net>

	* generic/tkBind.c (TkpGetBindingXEvent): Add helper method
	that can be used to query the XEvent* for the currently
	executing binding.
	* generic/tkInt.h: Declare TkpGetBindingXEvent.
	* win/tkWinMenu.c (MenuKeyBindProc, TkWinMenuKeyObjCmd,
	TkpInitializeMenuBindings): Rename MenuKeyBindProc to
	TkWinMenuKeyObjCmd and convert it into a Tcl command
	named tk_tkWinMenuKey. Bind keyboard accelerator
	actions to this Tcl command instead of using a native
	C binding so that user code can manipulate the binding
	in Tcl code.
	[Source-Navigator bug 570080]

2003-03-28  Mo DeJong  <mdejong@users.sourceforge.net>

	* generic/tkImgPhoto.c (ImgPhotoCmd):
	* generic/tkMenu.c (MenuWidgetObjCmd): Remove
	unused local variables which made the compile
	fail under VC++ when --enable-symbols is passed.
